// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`map reducers should return initial state 1`] = `
Object {
  "center": Array [
    0,
    0,
  ],
  "resolution": 76.437,
}
`;

exports[`map reducers should return initial state 2`] = `
Object {
  "center": Array [
    0,
    0,
  ],
  "resolution": 76.437,
}
`;

exports[`map reducers should return state with new center 1`] = `
Object {
  "center": Array [
    0,
    0,
  ],
  "resolution": 76.437,
}
`;

exports[`map reducers should return state with new center 2`] = `
Object {
  "center": Array [
    10,
    -10,
  ],
  "resolution": 76.437,
}
`;

exports[`map reducers should return state with new center 3`] = `
Object {
  "center": Array [
    5000,
    -5000,
  ],
  "resolution": 76.437,
}
`;

exports[`map reducers should return state with new resolution 1`] = `
Object {
  "center": Array [
    0,
    0,
  ],
  "resolution": 0,
}
`;

exports[`map reducers should return state with new resolution 2`] = `
Object {
  "center": Array [
    0,
    0,
  ],
  "resolution": 100,
}
`;

exports[`map reducers should return state with new resolution 3`] = `
Object {
  "center": Array [
    0,
    0,
  ],
  "resolution": 76,
}
`;
